# macterm

./: .gitignore  Cargo.toml  README-zh.md  README.md
crates/macterm-core/: Cargo.toml
crates/macterm-core/src/: layout.rs  lib.rs  pane.rs  tab.rs  workspace.rs
crates/macterm-tui/: Cargo.toml
crates/macterm-tui/src/: animations.rs  app.rs  config.rs  confirmation.rs  lib.rs  pty.rs  stats.rs  ui.rs
crates/macterm-tui/src/widgets/: header.rs  mod.rs  pane_grid.rs  status_bar.rs  tab_bar.rs
src/: main.rs
