[workspace]
members = [
    "crates/macterm-core",
    "crates/macterm-tui",
]
resolver = "2"

[package]
name = "macterm"
version = "0.1.0"
edition = "2021"
description = "A modern multi-terminal TUI multiplexer for macOS with beautiful animations"

[dependencies]
macterm-tui = { path = "crates/macterm-tui" }
macterm-core = { path = "crates/macterm-core" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
