[package]
name = "macterm-tui"
version = "0.2.4"
edition = "2021"

[dependencies]
macterm-core = { path = "../macterm-core" }
ratatui = { version = "0.29", features = ["all-widgets"] }
crossterm = { version = "0.28", features = ["event-stream"] }
portable-pty = "0.9"
vt100 = "0.15"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tachyonfx = "0.6"
color-eyre = "0.6"
futures = "0.3"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
