[package]
name = "macterm-tui"
version = "0.2.5"
edition = "2021"

[dependencies]
macterm-core = { path = "../macterm-core" }
ratatui = { version = "0.29", features = [] }
crossterm = { version = "0.28", features = ["event-stream"] }
portable-pty = "0.9"
vt100 = "0.15"
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
futures = "0.3"
anyhow = "1"
log = "0.4"
env_logger = "0.11"
arboard = "3"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
sysinfo = "0.33"
